[gd_scene load_steps=15 format=3 uid="uid://5xh0ditfqv66"]

[ext_resource type="Script" path="res://Global/HUD/hud.gd" id="1_jkdcx"]
[ext_resource type="Script" path="res://Global/HUD/bag_container.gd" id="3_wy0c7"]
[ext_resource type="Texture2D" uid="uid://bojls6d0ucddj" path="res://Styles/UI Assets/Theme_Placeholder/menu_frame _small.png" id="4_cfqit"]
[ext_resource type="Script" path="res://Global/HUD/hud_disc.gd" id="4_exk0s"]
[ext_resource type="Script" path="res://Global/HUD/charge_bar.gd" id="5_1rnm5"]
[ext_resource type="Texture2D" uid="uid://cplq58wek8oxa" path="res://Styles/UI Assets/Theme_Placeholder/menu_button _small.png" id="5_3br8d"]

[sub_resource type="Gradient" id="Gradient_p62is"]
offsets = PackedFloat32Array(0.651163, 0.75)
colors = PackedColorArray(0, 0, 0, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_qv6js"]
gradient = SubResource("Gradient_p62is")
width = 40
height = 40
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="Gradient" id="Gradient_hdg0t"]
offsets = PackedFloat32Array(0.651163, 0.75)
colors = PackedColorArray(0, 0, 0, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_8231m"]
gradient = SubResource("Gradient_hdg0t")
width = 40
height = 40
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="Gradient" id="Gradient_7onfw"]
offsets = PackedFloat32Array(0.651163, 0.75)
colors = PackedColorArray(0, 0, 0, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ch2o2"]
gradient = SubResource("Gradient_7onfw")
width = 40
height = 40
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_77m08"]
texture = ExtResource("4_cfqit")
texture_margin_left = 22.0
texture_margin_top = 22.0
texture_margin_right = 22.0
texture_margin_bottom = 22.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qy0ja"]
texture = ExtResource("5_3br8d")
texture_margin_left = 22.0
texture_margin_top = 7.0
texture_margin_right = 22.0
texture_margin_bottom = 8.0
region_rect = Rect2(-10, -10, 110, 110)

[node name="HUD" type="Control" groups=["HUD"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 10
mouse_filter = 2
script = ExtResource("1_jkdcx")

[node name="Bag_Container" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -91.0
offset_right = 180.0
grow_vertical = 0
region_rect = Rect2(1, 6, 144, 171)
patch_margin_left = 2
patch_margin_top = 28
patch_margin_right = 2
patch_margin_bottom = 2
script = ExtResource("3_wy0c7")

[node name="VBoxContainer" type="VBoxContainer" parent="Bag_Container"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Bag_Container/VBoxContainer"]
layout_mode = 2
text = "[ STATS ]"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Bag_Container/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="Bag_Container/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 50
alignment = 1

[node name="Disc_Slot_01" type="Control" parent="Bag_Container/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("4_exk0s")

[node name="Disc_Sprite" type="TextureRect" parent="Bag_Container/VBoxContainer/MarginContainer/HBoxContainer/Disc_Slot_01"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -22.0
offset_right = 20.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_qv6js")

[node name="Disc_Label" type="Label" parent="Bag_Container/VBoxContainer/MarginContainer/HBoxContainer/Disc_Slot_01"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1

[node name="Disc_Slot_02" type="Control" parent="Bag_Container/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
script = ExtResource("4_exk0s")
slot = 2

[node name="Disc_Sprite" type="TextureRect" parent="Bag_Container/VBoxContainer/MarginContainer/HBoxContainer/Disc_Slot_02"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -22.0
offset_right = 20.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_8231m")

[node name="Disc_Label" type="Label" parent="Bag_Container/VBoxContainer/MarginContainer/HBoxContainer/Disc_Slot_02"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1

[node name="Disc_Slot_03" type="Control" parent="Bag_Container/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("4_exk0s")
slot = 3

[node name="Disc_Sprite" type="TextureRect" parent="Bag_Container/VBoxContainer/MarginContainer/HBoxContainer/Disc_Slot_03"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -22.0
offset_right = 20.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_ch2o2")

[node name="Disc_Label" type="Label" parent="Bag_Container/VBoxContainer/MarginContainer/HBoxContainer/Disc_Slot_03"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1

[node name="Stroke_Container" type="NinePatchRect" parent="."]
layout_mode = 1
offset_right = 90.0
offset_bottom = 91.0
region_rect = Rect2(1, 6, 144, 135.945)
patch_margin_left = 2
patch_margin_top = 28
patch_margin_right = 2
patch_margin_bottom = 2
script = ExtResource("3_wy0c7")

[node name="VBoxContainer" type="VBoxContainer" parent="Stroke_Container"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Stroke_Container/VBoxContainer"]
layout_mode = 2
text = "[ Strokes ]"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Stroke_Container/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Strokes" type="Label" parent="Stroke_Container/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 29
text = "00 "
horizontal_alignment = 1

[node name="Charge_Bar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -54.0
offset_right = 750.0
offset_bottom = 46.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.5, 0.5)
theme_override_styles/background = SubResource("StyleBoxTexture_77m08")
theme_override_styles/fill = SubResource("StyleBoxTexture_qy0ja")
value = 50.0
show_percentage = false
script = ExtResource("5_1rnm5")
