extends NinePatchRect
@onready var disc_slot_01 = $VBoxContainer/MarginContainer/HBoxContainer/Disc_Slot_01
@onready var disc_slot_02 = $VBoxContainer/MarginContainer/HBoxContainer/Disc_Slot_02
@onready var disc_slot_03 = $VBoxContainer/MarginContainer/HBoxContainer/Disc_Slot_03



# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
